--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -54,18 +54,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ben\\AppData\\Local\\Temp\\ipykernel_9964\\2696469760.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\tangu\\AppData\\Local\\Temp\\ipykernel_7908\\2437542905.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_motor_stopped['reason'] = 'Motor stopped'\n",
-      "C:\\Users\\Ben\\AppData\\Local\\Temp\\ipykernel_9964\\2696469760.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_motor_stopped['IDreason'] = 1\n"
+      "  df_motor_stopped['reason'] = 'Motor stopped'\n"
      ]
     },
     {
@@ -104,11 +98,9 @@
        "      <th>RS_T_OilTemp_PC1</th>\n",
        "      <th>RS_T_OilTemp_PC2</th>\n",
        "      <th>reason</th>\n",
-       "      <th>IDreason</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>timestamps_UTC</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -144,7 +136,6 @@
        "      <td>83.0</td>\n",
        "      <td>77.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-08-24 20:33:12</th>\n",
@@ -163,7 +154,6 @@
        "      <td>28.0</td>\n",
        "      <td>31.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-08-24 09:44:38</th>\n",
@@ -182,7 +172,6 @@
        "      <td>82.0</td>\n",
        "      <td>81.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-08-23 22:42:39</th>\n",
@@ -201,7 +190,6 @@
        "      <td>81.0</td>\n",
        "      <td>83.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-08-24 12:04:19</th>\n",
@@ -220,11 +208,9 @@
        "      <td>23.0</td>\n",
        "      <td>25.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -258,7 +244,6 @@
        "      <td>23.0</td>\n",
        "      <td>17.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-05-28 10:59:36</th>\n",
@@ -277,7 +262,6 @@
        "      <td>79.0</td>\n",
        "      <td>90.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-05-28 15:19:17</th>\n",
@@ -296,7 +280,6 @@
        "      <td>42.5</td>\n",
        "      <td>30.5</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-05-26 16:30:33</th>\n",
@@ -315,7 +298,6 @@
        "      <td>80.0</td>\n",
        "      <td>77.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-05-28 20:23:20</th>\n",
@@ -334,11 +316,10 @@
        "      <td>80.0</td>\n",
        "      <td>82.0</td>\n",
        "      <td>Motor stopped</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>566184 rows × 16 columns</p>\n",
+       "<p>566184 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -398,35 +379,21 @@
        "2023-05-26 16:30:33           0.0              77.0              77.0   \n",
        "2023-05-28 20:23:20           0.0              78.0              82.0   \n",
        "\n",
-       "                     RS_T_OilTemp_PC1  RS_T_OilTemp_PC2         reason  \\\n",
-       "timestamps_UTC                                                           \n",
-       "2023-08-01 07:02:27              83.0              77.0  Motor stopped   \n",
-       "2023-08-24 20:33:12              28.0              31.0  Motor stopped   \n",
-       "2023-08-24 09:44:38              82.0              81.0  Motor stopped   \n",
-       "2023-08-23 22:42:39              81.0              83.0  Motor stopped   \n",
-       "2023-08-24 12:04:19              23.0              25.0  Motor stopped   \n",
-       "...                               ...               ...            ...   \n",
-       "2023-05-28 10:37:06              23.0              17.0  Motor stopped   \n",
-       "2023-05-28 10:59:36              79.0              90.0  Motor stopped   \n",
-       "2023-05-28 15:19:17              42.5              30.5  Motor stopped   \n",
-       "2023-05-26 16:30:33              80.0              77.0  Motor stopped   \n",
-       "2023-05-28 20:23:20              80.0              82.0  Motor stopped   \n",
+       "                     RS_T_OilTemp_PC1  RS_T_OilTemp_PC2         reason  \n",
+       "timestamps_UTC                                                          \n",
+       "2023-08-01 07:02:27              83.0              77.0  Motor stopped  \n",
+       "2023-08-24 20:33:12              28.0              31.0  Motor stopped  \n",
+       "2023-08-24 09:44:38              82.0              81.0  Motor stopped  \n",
+       "2023-08-23 22:42:39              81.0              83.0  Motor stopped  \n",
+       "2023-08-24 12:04:19              23.0              25.0  Motor stopped  \n",
+       "...                               ...               ...            ...  \n",
+       "2023-05-28 10:37:06              23.0              17.0  Motor stopped  \n",
+       "2023-05-28 10:59:36              79.0              90.0  Motor stopped  \n",
+       "2023-05-28 15:19:17              42.5              30.5  Motor stopped  \n",
+       "2023-05-26 16:30:33              80.0              77.0  Motor stopped  \n",
+       "2023-05-28 20:23:20              80.0              82.0  Motor stopped  \n",
        "\n",
-       "                     IDreason  \n",
-       "timestamps_UTC                 \n",
-       "2023-08-01 07:02:27         1  \n",
-       "2023-08-24 20:33:12         1  \n",
-       "2023-08-24 09:44:38         1  \n",
-       "2023-08-23 22:42:39         1  \n",
-       "2023-08-24 12:04:19         1  \n",
-       "...                       ...  \n",
-       "2023-05-28 10:37:06         1  \n",
-       "2023-05-28 10:59:36         1  \n",
-       "2023-05-28 15:19:17         1  \n",
-       "2023-05-26 16:30:33         1  \n",
-       "2023-05-28 20:23:20         1  \n",
-       "\n",
-       "[566184 rows x 16 columns]"
+       "[566184 rows x 15 columns]"
       ]
      },
      "execution_count": 4,
@@ -438,7 +405,6 @@
     "motor_stopped = (df_dropped['RS_E_RPM_PC1'] == 0) & (df_dropped['RS_E_RPM_PC2'] == 0)\n",
     "df_motor_stopped = df_dropped[motor_stopped]\n",
     "df_motor_stopped['reason'] = 'Motor stopped'\n",
-    "df_motor_stopped['IDreason'] = 1\n",
     "df_dropped = df_dropped[~motor_stopped] \n",
     "df_motor_stopped"
    ]
@@ -983,7 +949,6 @@
     "df_air_temp_out = df_dropped[(df_dropped['RS_E_InAirTemp_PC2'] < 0) | (df_dropped['RS_E_InAirTemp_PC2'] > 100)]\n",
     "df_dropped = df_dropped[(df_dropped['RS_E_InAirTemp_PC2'] >= 0) & (df_dropped['RS_E_InAirTemp_PC2'] <= 100)]\n",
     "df_air_temp_out['reason'] = 'Air temp out'\n",
-    "df_air_temp_out['IDreason'] = 2\n",
     "df_air_temp_out"
    ]
   },
@@ -1399,13 +1364,12 @@
     }
    ],
    "source": [
-    "df_oil_press_out = df_dropped[(df_dropped['RS_E_RPM_PC1'] <= 0) | (df_dropped['RS_E_RPM_PC1'] > 2100)]\n",
+    "df_RPM_out = df_dropped[(df_dropped['RS_E_RPM_PC1'] <= 0) | (df_dropped['RS_E_RPM_PC1'] > 2100)]\n",
     "df_dropped = df_dropped[(df_dropped['RS_E_RPM_PC1'] > 0) & (df_dropped['RS_E_RPM_PC1'] <= 2100)]\n",
-    "df_oil_press_out = df_dropped[(df_dropped['RS_E_RPM_PC2'] <= 0) | (df_dropped['RS_E_RPM_PC2'] > 2100)]\n",
+    "df_RPM_out = df_dropped[(df_dropped['RS_E_RPM_PC2'] <= 0) | (df_dropped['RS_E_RPM_PC2'] > 2100)]\n",
     "df_dropped = df_dropped[(df_dropped['RS_E_RPM_PC2'] > 0) & (df_dropped['RS_E_RPM_PC2'] <= 2100)]\n",
-    "df_oil_press_out['reason'] = 'RPM out'\n",
-    "df_oil_press_out['IDreason'] = 3\n",
-    "df_oil_press_out"
+    "df_RPM_out['reason'] = 'RPM out'\n",
+    "df_RPM_out"
    ]
   },
   {
@@ -1819,7 +1783,6 @@
     "df_water_temp_out = df_dropped[(df_dropped['RS_E_WatTemp_PC2'] < 0) | (df_dropped['RS_E_WatTemp_PC2'] > 100)]\n",
     "df_dropped = df_dropped[(df_dropped['RS_E_WatTemp_PC2'] >= 0) & (df_dropped['RS_E_WatTemp_PC2'] <= 100)]\n",
     "df_water_temp_out['reason'] = 'Water temp out'\n",
-    "df_water_temp_out['IDreason'] = 4\n",
     "df_water_temp_out"
    ]
   },
@@ -1920,7 +1883,6 @@
     "df_oil_temp_out = df_dropped[(df_dropped['RS_T_OilTemp_PC2'] < 0) | (df_dropped['RS_T_OilTemp_PC2'] > 150)]\n",
     "df_dropped = df_dropped[(df_dropped['RS_T_OilTemp_PC2'] >= 0) & (df_dropped['RS_T_OilTemp_PC2'] <= 150)]\n",
     "df_oil_temp_out['reason'] = 'Oil temp out'\n",
-    "df_oil_temp_out['IDreason'] = 5\n",
     "df_oil_temp_out"
    ]
   },
@@ -2084,7 +2046,6 @@
     "df_coordinates_out = df_dropped[(df_dropped['lat'] < 49.5) | (df_dropped['lat'] > 51.5)]\n",
     "df_dropped = df_dropped[(df_dropped['lat'] >= 49.5) & (df_dropped['lat'] <= 51.5)]\n",
     "df_coordinates_out['reason'] = 'Coordinates out'\n",
-    "df_coordinates_out['reason'] = 6\n",
     "df_coordinates_out"
    ]
   },
@@ -2094,7 +2055,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_outliers = pd.concat([df_motor_stopped, df_air_temp_out, df_oil_temp_out, df_water_temp_out, df_oil_press_out, df_coordinates_out])\n",
+    "df_outliers = pd.concat([df_motor_stopped, df_air_temp_out, df_oil_temp_out, df_water_temp_out, df_RPM_out, df_coordinates_out])\n",
     "df_outliers.to_csv('ar41_for_ulb_all_outliers.csv', sep=';')"
    ]
   },
@@ -2251,7 +2212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dropped.to_csv('ar41_for_ulb_cleaned.csv', sep=\";\", index=False)"
+    "df_dropped.to_csv('ar41_for_ulb_cleaned.csv', sep=\";\")"
    ]
   },
   {
@@ -2505,7 +2466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
