--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1364,10 +1364,10 @@
     }
    ],
    "source": [
-    "df_RPM_out = df_dropped[(df_dropped['RS_E_RPM_PC1'] <= 0) | (df_dropped['RS_E_RPM_PC1'] > 2100)]\n",
-    "df_dropped = df_dropped[(df_dropped['RS_E_RPM_PC1'] > 0) & (df_dropped['RS_E_RPM_PC1'] <= 2100)]\n",
-    "df_RPM_out = df_dropped[(df_dropped['RS_E_RPM_PC2'] <= 0) | (df_dropped['RS_E_RPM_PC2'] > 2100)]\n",
-    "df_dropped = df_dropped[(df_dropped['RS_E_RPM_PC2'] > 0) & (df_dropped['RS_E_RPM_PC2'] <= 2100)]\n",
+    "df_RPM_out = df_dropped[(df_dropped['RS_E_RPM_PC1'] < 0) | (df_dropped['RS_E_RPM_PC1'] > 2100)]\n",
+    "df_dropped = df_dropped[(df_dropped['RS_E_RPM_PC1'] >= 0) & (df_dropped['RS_E_RPM_PC1'] <= 2100)]\n",
+    "df_RPM_out = df_dropped[(df_dropped['RS_E_RPM_PC2'] < 0) | (df_dropped['RS_E_RPM_PC2'] > 2100)]\n",
+    "df_dropped = df_dropped[(df_dropped['RS_E_RPM_PC2'] >= 0) & (df_dropped['RS_E_RPM_PC2'] <= 2100)]\n",
     "df_RPM_out['reason'] = 'RPM out'\n",
     "df_RPM_out"
    ]
@@ -2466,7 +2466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
