--- a/K-Algo.ipynb
+++ b/K-Algo.ipynb
@@ -143,7 +143,7 @@
     "data['cluster'] = kmeans.labels_\n",
     "\n",
     "# Calculate the distance of each point to its assigned cluster center\n",
-    "data['distance_to_center'] = np.min(kmeansStandard.transform(X_scaled), axis=1)"
+    "data['distance_to_center'] = np.min(kmeans.transform(X_scaled), axis=1)"
    ]
   },
   {
@@ -1694,7 +1694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
